[gd_scene load_steps=28 format=3 uid="uid://bnxg6awhb6o3d"]

[ext_resource type="Script" path="res://Script/nightgiant.gd" id="1_1e5jd"]
[ext_resource type="Texture2D" uid="uid://cmmabs2u6t61m" path="res://Assets/Mob/Ennemies/nightgiant_damaged.png" id="2_0dg0u"]
[ext_resource type="Texture2D" uid="uid://dq20vto257tsr" path="res://Assets/Mob/Ennemies/nightgiant_hit.png" id="3_42p6m"]
[ext_resource type="Texture2D" uid="uid://djom3set8e0ka" path="res://Assets/Mob/Ennemies/Nightgiant_walk.png" id="5_tvkfl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c8eoj"]
atlas = ExtResource("2_0dg0u")
region = Rect2(0, 0, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k5pi"]
atlas = ExtResource("2_0dg0u")
region = Rect2(32, 0, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5yai"]
atlas = ExtResource("2_0dg0u")
region = Rect2(64, 0, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kmxi"]
atlas = ExtResource("2_0dg0u")
region = Rect2(96, 0, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nx2g"]
atlas = ExtResource("2_0dg0u")
region = Rect2(128, 0, 32, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjsqf"]
atlas = ExtResource("3_42p6m")
region = Rect2(0, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww4ws"]
atlas = ExtResource("3_42p6m")
region = Rect2(48, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_s41xn"]
atlas = ExtResource("3_42p6m")
region = Rect2(96, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2hjs"]
atlas = ExtResource("3_42p6m")
region = Rect2(144, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_53801"]
atlas = ExtResource("3_42p6m")
region = Rect2(192, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_h34pd"]
atlas = ExtResource("3_42p6m")
region = Rect2(240, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4nj3"]
atlas = ExtResource("5_tvkfl")
region = Rect2(0, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0byp"]
atlas = ExtResource("5_tvkfl")
region = Rect2(0, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kj8g"]
atlas = ExtResource("5_tvkfl")
region = Rect2(32, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_t750g"]
atlas = ExtResource("5_tvkfl")
region = Rect2(64, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cl8q"]
atlas = ExtResource("5_tvkfl")
region = Rect2(96, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpf53"]
atlas = ExtResource("5_tvkfl")
region = Rect2(128, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_rctqc"]
atlas = ExtResource("5_tvkfl")
region = Rect2(160, 0, 32, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_p71vj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8eoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k5pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5yai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kmxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nx2g")
}],
"loop": false,
"name": &"Damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjsqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww4ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s41xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2hjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53801")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h34pd")
}],
"loop": true,
"name": &"Hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4nj3")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0byp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kj8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t750g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cl8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpf53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rctqc")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1e7n"]
size = Vector2(33.3333, 49.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5408m"]
size = Vector2(11.0833, 33)

[sub_resource type="Curve" id="Curve_a2472"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_058s8"]
offsets = PackedFloat32Array(0.146667)
colors = PackedColorArray(0.176471, 0.0862745, 0.172549, 1)

[node name="Nightgiant" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 15
platform_floor_layers = 0
script = ExtResource("1_1e5jd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p71vj")
animation = &"Hit"
autoplay = "Idle"
frame_progress = 0.151597
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.66667, 0.666667)
shape = SubResource("RectangleShape2D_w1e7n")

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2(14, 9.33333)
shape = SubResource("RectangleShape2D_5408m")

[node name="DamagedTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(-1, 5)
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 0.83
direction = Vector2(0, -1)
spread = 50.0
gravity = Vector2(0, 2500)
initial_velocity_min = 200.0
initial_velocity_max = 500.0
scale_amount_max = 7.0
scale_amount_curve = SubResource("Curve_a2472")
color_initial_ramp = SubResource("Gradient_058s8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SoundEffect"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HitZone" to="." method="_on_hit_zone_body_entered"]
[connection signal="body_exited" from="HitZone" to="." method="_on_hit_zone_body_exited"]
[connection signal="timeout" from="DamagedTimer" to="." method="_on_damaged_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
